# flea_advisor

./: README.md  pyproject.toml
docs/: requirements.md
src/fmea_advisor/: advisor.ipynb  crew.py  main.py
